# Pkjviz-py

./: .gitignore  .pylintrc  POETRY_GUIDE.md  README.md  mypy.ini  pyproject.toml  run.py  run_checks.py  setup.py
pkjviz/: __init__.py  __main__.py
pkjviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pkjviz/app/: __init__.py  app.py  mainwindow.py  run.py
pkjviz/config/: __init__.py  base.py  main.py
pkjviz/utils/: __init__.py  qthelpers.py
pkjviz/widgets/: __init__.py  device_dialog.py  editor.py  mode_switch.py  online_tools.py  packet_sender.py  project_browser.py  splitview.py  tab_manager.py  theme_switcher.py
src/: __init__.py  main.py
src/controllers/: __init__.py  diagnostic_controller.py  login_controller.py  packet_sender_controller.py  register_controller.py
src/models/: __init__.py  acl_model.py  device_model.py  diagnostic_model.py  packet_model.py  register_model.py
src/ui/: __init__.py  login_dialog.ui  login_dialog_ui.py  main_window.ui  main_window_ui.py  packet_sender.ui  packet_sender_ui.py  register_editor.py  register_editor.ui  register_editor_ui.py
src/ui/icons/: README.md
