[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkjviz"
version = "0.1.0"
description = "Python implementation of Pkjviz"
authors = [
    {name = "Author"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "qtpy>=2.0.0",
    "qtawesome>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=0.800",
    "pytest>=6.0.0",
    "black>=21.0.0",
]

[tool.setuptools]
packages = ["pkjviz"] 