[tool.poetry]
name = "pkjviz-py"
version = "0.1.0"
description = "基于PySide6的Pkjviz可视化界面，提供仿Spyder IDE的界面布局和交互"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PySide6 = "^6.0.0"
pytest = "^6.0.0"
pytest-qt = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pkjviz = "src.main:main" 